--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-SSZNFH6REN'); // Updated GA4 Measurement ID
+    gtag('config', 'G-SSZNFH6REN'); // GA4 Measurement ID
   </script>
 </head>
 <body>
@@ -25,7 +25,7 @@
         "event_label": "WattDeals Pass"
       });
 
-      // Redirect after short delay so GA event fires
+      // Redirect after short delay (only once!)
       setTimeout(function() {
         window.location.href = "https://drive.google.com/uc?export=download&id=1cmJKI2cwibzm0Q3BRH8m2RRi8XatUqQP";
       }, 1000);
