--- a/index.html
+++ b/index.html
@@ -10,29 +10,25 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-SSZNFH6REN'); // GA4 Measurement ID
+    gtag('config', 'G-SSZNFH6REN');
   </script>
 </head>
 <body>
-  <p>Preparing your WattDeals Pass download...</p>
+  <h2>Download Your WattDeals Pass</h2>
+  <p>Click the button below to download:</p>
+  <button onclick="downloadPass()">Download Pass</button>
 
   <script>
-    function redirectWithGA() {
-      // Log custom "download" event
+    function downloadPass() {
       gtag("event", "pkpass_download", {
         "file_name": "wattdeals-pass.pkpass",
         "event_category": "engagement",
         "event_label": "WattDeals Pass"
       });
 
-      // Redirect after short delay (only once!)
-      setTimeout(function() {
-        window.location.href = "https://drive.google.com/uc?export=download&id=1cmJKI2cwibzm0Q3BRH8m2RRi8XatUqQP";
-      }, 1000);
+      // Trigger download
+      window.location.href = "https://drive.google.com/uc?export=download&id=1cmJKI2cwibzm0Q3BRH8m2RRi8XatUqQP";
     }
-
-    // Run redirect after page fully loads
-    window.onload = redirectWithGA;
   </script>
 </body>
 </html>
